fix: show Deposit/Withdraw buttons on mobile

--- a/web/src/mobile/styles/components/Footer.pcss
+++ b/web/src/mobile/styles/components/Footer.pcss
@@ -5,7 +5,7 @@
   box-shadow: inset 0 1px 0 var(--divider-color-level-1);
   display: flex;
   flex-direction: row;
-  height: 52px;
+  height: var(--mobile-footer-height);
   justify-content: space-between;
   position: fixed;
   width: 100%;
